--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -5,4 +5,6 @@ jobs:
   check-bats-version:
     runs-on: self-hosted
     steps:
-      - run: ./build.sh
+      - name: run build.sh
+        run: ./build.sh
+        shell: bash	
