--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -6,5 +6,5 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: run build.sh
-        run: ./build.sh
+        run: ./script/build.sh
         shell: bash	
