--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -5,6 +5,7 @@ jobs:
   check-bats-version:
     runs-on: self-hosted
     steps:
+      - uses: actions/checkout@v3
       - name: run build.sh
-        run: pwd;ls
+        run: ./build.sh
         shell: bash	
