--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,11 +1,18 @@
-name: learn-github-actions
-run-name: ${{ github.actor }} is learning GitHub Actions
-on: [push]
+name: CI
+
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
+  workflow_dispatch:
+
 jobs:
-  check-bats-version:
-    runs-on: self-hosted
+  build:
+    runs-on: [self-hosted, example]
     steps:
-      - uses: actions/checkout@master
-      - name: run build.sh
-        run: ./build.sh
-        shell: bash	
+      - uses: actions/checkout@v3
+
+      - name: Run a one-line script
+        run: echo Hello, world!
