--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: [self-hosted, example]
     steps:
       - uses: actions/checkout@v3
+        env:     
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
       - name: Run a one-line script
         run: echo Hello, world!
